--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -230,4 +230,134 @@
  2. 프로젝트 폴더를 구성 : $gradle init
  3. 이클립스용 프로젝트 설정파일 생성
 
-     
+# 11월 30일
+
+    *스프링 부트 실행
+
+웹 브라우저가 요청 웹서버가 응답(HTTP라는 프로토콜을 이용해서 서로통신)
+스프링 부트를 실행하기 위한 명령어 
+SpringApplication.run(App.class, args);
+
+exam1, 2 등을 실행하기 위해선 App.java라는 서버가 필요하다.
+exam1, 2에는 엔트리포인트(메인메서드)가 없기 때문에 혼자서는
+작동할 수 없다. 
+
+11월30일
+- 클래스 실행과 외부 라이브러리의 관계를 설명할 수 있는가 ?
+ - jar 파일의 이름 유래를 설명할 수 있는가 ?
+- Spring boot의 실행 과정을 설명할 수 있는가 ?
+->자바 버츄얼머신 실행 -> App클래스 실행 -> 스프링부트 실행 
+->서블릿컨테이너 + 웹 서버 동작 -> exam1, exam2실행
+
+
+* 명령문 :  (메서드 : 특정 기능을 수행하는 명령문들의묶음 )
+void main() { (명령문) } 
+ (클래스 : 특정 역할을 수행하는 메서드들의 묶음) class calculator {
+		int plus() {}
+ 패키지 : 비슷한 역할에 따라 클래스를 분류  -test/ c.class
+
+* Data 크기와 메모리 관계
+
+메모리는 Bit( 전기를 채우는 공간 - 완전히 채우거나, 안채우거나 2가지
+상태만 가능). 더 정교하게 구분하려면 장비 자체가 더 정교해져야 하기 
+때문에 비용이 더욱 증가하게 된다. 
+
+* 메모리에 값 저장을 어떻게 할 것인가 ?  Bit에 전기를 채웠는지/안 채웠
+는지의 상태로 표현.
+1Bit 전기가 안 찬 상태를 0이라고 가정, 찬 상태를 1이라고 가정. 
+2Bit 2개 모두 안찬 상태를 0, 한쪽 비트만 찬 상태를 1, 또 다른 한쪽만
+찬 상태를 2, 모두 찬 상태를 3
+
+* 값(Data)를 메모리에 저장? 
+ 숫자, 문자, 색상, 어떤 타입의 데이터든지 Bit의전기적 상태(Bit가 차
+있는지, 차 있지 않은지)로 표현
+ 
+ 전기적 신호로 표현할 때 규칙이 필요하다. 
+
+* 비트의 전기 상태를 표현하는 간단한 방법 
+ 
+ 2진수 표기법(0과 1로 표현)  0 0 0 0 , 0 0 0 1 .... 1 1 1 1
+
+* 값을 메모리에 저장 
+
+값에 대한 2진수 표현 규칙을 정의하여, 값을 2진수로 표현
+-> 어떤 값이든 2진수로 표현할 수 있다면 메모리의 전기적 상태로(Bit)로
+저장할 수 있다. 
+
+* 값과(Data) 2진수의 관계
+ 숫자 -> 2진수 -> Bit에 저장가능  : 2의 보수 표기법
+ 문자 -> 2진수 -> Bit에 저장가능  : char(UTF-8 등) 
+ 색상 -> 2진수 -> Bit에 저장가능  : RGB
+ => 메모리에 저장하려면 2진수로 표현할 수 있어야 한다.(규칙이 필요)
+      2진수로 표현할 수 없는 것은 메모리에 저장할 수 없다. 
+
+* 메모리의 크기와 값의 범위
+<양의 정수로 표현할 경우>
+ 1bit => 0 또는 1 
+ 2bit => 0, 1, 2, 3
+ 4bit => 0~15
+ 8bit(1byte : 기본 메모리 단위)  => 0~255
+ 16bit => 0~65535
+ 
+정수를 2진수로 변환하는 규칙
+
+* sign-magnitude(절대 부호) 
+       + 5 = 0101
+        - 5 = 1101 : 처음 1이 부호를 결정하는 비트(부호비트)이다
+       단점 : 양수와 음수의 더하기가 불가능
+	+5 0101 
+	 -5 1101
+	=> 0010 = 2  : 오류발생
+* 1의 보수  (1이 되기 위해 보충해 주는 수)
+	   0 + () = 1
+	   1 + () = 1  
+	1과,0이 각각이 1의 보수이다.            
+ 1의 보수는 계산 결과에 1을 더해야만 정확한 결과값을 얻을 수 있다. 
+
+* 2의 보수 
+
+
+**1의 보수, 2의 보수 개념 정리하기
+
+자바의 정수 리터럴
+1. 4바이트 정수 리터럴
+2. 8바이트 정수 리터럴 표현방식 공부하기  
+
+## 11월 30일 질문
+- 클래스 실행과 외부 라이브러리의 관계를 설명할 수 있는가?
+  - jar 파일의 이름 유래를 설명할 수 있는가?
+- 스프링부트의 실행 과정을 설명할 수 있는가?
+- 메모리에 값을 저장하는 원리를 설명할 수 있는가?
+- 정수를 2진수로 표현하는 규칙을 알고 있는가?
+- Sign-Magniutude/1의 보수 /2의보수 /Excess-K규칙을 설명할 수 있는가?
+- 메모리 크기에 따라 저장할 수 있는 정수값의 범위를 설명할 수 있는가?
+- 4바이트 크기의 정수 리터럴과 8바이트 크기의 정수 리터럴을 표현할 수 있는가?  8바이트는 숫자 뒤에 L or l 추가.
+- 부동소수점이 메모리에 저장되는 원리를 설명할 수 있는가?
+
+> **부동소수점을 메모리에 저장하는 방법**
+> 부동소수점을 2진수화 시켜야만 메모리에 저장할 수 있다. (어떤 data든 2진수로 표현할 수 있으면 메모리에 저장가능하다.)
+
+* 부동소수점 리터럴
+  * 4byte 부동 소수점
+    * 12,375f -> 소문자 f를 선호
+    * 12.375F
+  * 8byte 부동 소수점
+    * 12.375 -> 안붙이는 걸 선호
+    * 12.375d
+    * 12.375D
+* 메모리 크기에 따른 부동소수점 값의 범위
+  * 4byte 메모리 : (소수점 앞의 정수값 , 소수점 이하의 값)
+->2진수화 -> 정규화 처리 : 이 과정을 통해 메모리에 값이 저장되기 때문에 명확하게 -xx ~ +xx 범위를 산정할 수 없다. 또한 소수점 앞 자리수, 소수점 뒤 자리수도 결정할 수 없다. 
+다만 IEEE-754 방식에 따라 2진수로 바꾸더라도 값이 짤리지 않는 범위를 대략적으로 알 수 있다.
+ >ex ) 4byte -> 소수점을 제거했을 때 7개의 숫자라면 거의 99.9% 메모리에 저장할 수 있다. 
+    > 8byte 메모리 : 소수점 제거후 15개의 숫자라면 거의 99.9% 메모리에 저장할 수 있다
+    => 이것을 '유효자릿수' 라고 부른다.
+
+  8byte 메모리는 4byte 메모리보다 2배더 많은 수를 저장할 수 있다. (2배더 정밀 한 수 저장 가능.) -> double precision(배정도) <-> single precision(단정도)
+
+  * 부동소수점의 유효범위 
+    * 4byte : 7자리 정도 유효. 그 이상의 숫자는 짤린다(정수 리터럴과 달리 오류는 발생하지 않음)
+    * 8byte : 15자리 정도 유효. 그 이상의 숫자는 짤린다. Exam03 - 0340.java예제 참조
+
+  * 
+
