--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -234,7 +234,7 @@
 
     *스프링 부트 실행
 
-웹 브라우저가 요청 웹서버가 응답(HTTP라는 프로토콜을 이용해서 서로통신)
+웹 브라우저가 요청, 웹서버가 응답(HTTP라는 프로토콜을 이용해서 서로통신)
 스프링 부트를 실행하기 위한 명령어 
 SpringApplication.run(App.class, args);
 
@@ -359,5 +359,143 @@ void main() { (명령문) }
     * 4byte : 7자리 정도 유효. 그 이상의 숫자는 짤린다(정수 리터럴과 달리 오류는 발생하지 않음)
     * 8byte : 15자리 정도 유효. 그 이상의 숫자는 짤린다. Exam03 - 0340.java예제 참조
 
-  * 
+  ---
+  # 12월 01일
+  #12월 1일
 
+Maven web프로젝트 .pom .xml(설정파일)
+* 문자 리터럴
+ 
+유니코드  'A' = \uabcd : 역슬래쉬(\)u 뒤에 4개의 문자(문자코드)
+를 정확하게 설정해야한다.
+
+* 값을 메모리에 저장하기 위해 2진수화 시키는 규칙
+ - 정수 
+	
+	 sign - magnitude
+	 1의보수
+	 2의보수
+	 Excess-k
+
+- 부동소수점 
+	 
+	 IEEE-754
+
+- 문자 
+	 Unicode(UTF-16BE= ucs2) 자바 기본규칙(국제표준)
+	 UTF-8(유니코드 변형규칙, 국제표준) 
+	 MS949(CP949) MS Windows에서 사용하는 규칙(비표준)
+	 EUC - KR(KSC5601) 예전의 국가 표준 한글 규칙(국제표준)
+	 조합형 HWP규칙(비표준)
+	 ISO-8859-1(영어권 표준규칙)
+	 ASCII 코드(미국규칙)
+
+* 문자의 2진수화 규칙(character set : 문자 집합- 문자에 번호를 부여<문자코드>한 테이블)
+
+	* **ASCII** - 7bit 크기의 번호를 부여 - 유럽 문자 포함
+	* **ISO-8859-1234(ISO-latin-1)** - 8bit 크기의 번호를 부여
+	* **EUC-KR** - 16bit 크기의 번호 부여,  한글 2350자에대해서만 번호 부여(ISO에는 한글규칙없음)
+	* **조합형** - 16bit 크기의 번호를 부여. 초성, 중성, 종성, 각 5bit로 번호부여
+	* **MS949(CP949)** - 16bit 크기의 번호를 부여. MS Windows에서 추가한 규칙. EUC-KR+ 알파. 11172자의 한글 음절에 대해 번호부여
+	* **Unicode(UCS2 = UTF-16)** - 16bit 크기의 번호 부여. 국제표준 규칙으로 한글, 영어등 번호 다시부여
+	* **UTF-8(유니코드 변형 포맷)** - 1~4byte 크기의 번호 부여. 영어는 다시 1byte사용. 한글은 2byte에서 3byte로 변경 및 재정의
+		
+		* unicode - JVM
+		* UTF -8 - 일반 App에서 사용
+	* **ASCII character set** - 문자에 대한 번호를 부여한 테이블
+	 문자 에서  2진수 (7bit)로 변환
+		
+		0 -> 0 1 1 0 0 0 0	(0x30)
+		1 -> 0 1 1 0 0 0 1	(0x31)		
+		2 -> 0 1 1 0 0 1 0	(0x32)
+		A -> 1 0 0 0 0 0 1	(0x41)
+		B -> 1 0 0 0 0 1 0 (0x42)
+		C -> 1 0 0 0 0 1 1	(0x43)
+
+	* **ISO - 8859 (8bit)** - 1 - 영어, 프랑스어, 이탈리어 등. ASCII(128자) + 프랑스어 등(128자). 한글 음절(8bit로 표현불가)에 대한 정의가 없다.
+	
+	     	0 -> 0x30 0(ASCII보다 1bit추가) 0 1 1  0 0 0 0 
+		1 -> 0x31 0 0 1 1  0 0 0 1
+		2 -> 0x32
+		A -> 0x41
+		B -> 0x42
+
+	* **EUC-KR(2byte)** - 한글음절 2350자 (국제표준)
+	  문자 에서 2진수
+
+		0 -> 0x30
+		1 -> 0x31
+		2 -> 0x32
+		A -> 0x41
+		B -> 0x42
+		=> ISO-8859-1 (영어 1byte사용)	
+		가 -> 0xB0A1
+		나
+		다
+		=>한글 2byte사용
+	* **조합형** - MS-DOS, Windows 3.0, Windows 3.1기간 동안 사용. 2byte를 사용.
+		
+    |초성(5bit)|중성(5bit)|종성(5bit)|
+    |--|--|--|
+    |ㄱ|ㅏ|ㄱ|
+    |ㄲ|ㅔ|ㄲ|
+
+> ex) 넬 -> 1(한글의 경우 첫비트가 1로시작)00100(5bit) 10100(5bit) 01001(5bit) : 초성, 중성, 종성에 부여된 숫자를 합쳐서 문자 코드를 정한다. 16bit 중에서 1로 시작하는 절반의 값을 한글이 모두 사용한다.
+
+* **MS949(CP949)** -2byte사용 = EUC-KR + 알파
+  <br>
+   * MS949에서 새로추가한 문자에 대해 사용되고 있지 않는 번호를 부여. 그래서 번호가 순서대로 부여되지 않았지만 기존 EUC-KR규칙과 호환가능. 즉, MS949 규칙에 따라 문자를 저장하더라도 EUC-KR에 정의된 문자는 기존과 같은 번호를 사용한다. 
+
+* **Unicode(UTF-16) =UCS2 -2byte사용(영어도 2byte 사용)
+<bR>
+  |문자|2진수|
+  |:--:|:--:|
+  |0|0x0030|
+  |1|0x0031|
+  |2|0x0032|
+  |A|0x0041|
+  |B|0x0042|
+  -> 숫자, 영어는 기존의 ISO-8859-1 문자도 2byte 숫자를 사용.
+  -> 11172개의 한글 음절에 대해 새로 번호를 부여했다.(EUC-KR과 호환되지 않는다.)
+
+ * **Unicode(UTF-8)** - 8bit 숫자로 정의 가능한 것은 그대로  8bit사용(ISO-8859-1 문자는 예전처럼 1byte사용 -> 영어권에서는 unicode를 처리하기 위해 따로 작업할 필요가 없다. ISO-8859-1과 호환 가능) 
+ 
+  |문자|2진수|
+  |:--:|:--:|
+  |0|0x30|
+  |1|0x31|
+  |2|0x32|
+  |A|0x41|
+  |B|0x42| 
+  -> 예전처럼 1byte사용(메모리 절약, 기존 편집기와 호환)
+  -> 한글의 UTF-8 변환 규칙에 따라 유니코드를 변환한다(2byte -> 3byte로 메모리 증가)
+
+* 컴파일과 문자 집합
+
+macos(UTF-8)에서 이클립스를 통해 java source file(UTF-8)을 저장. 컴파일러(javac.exe)가 source file을 읽어서 bytecoed 작성. 명령창(콘솔) - UTF-8 규칙에 따라 작성된 것으로 간주한다.
+
+하지만 window에서 컴파일할 경우 windows는 MS949를 사용하기 때문에 명령창 또한 MS949 형식이다. 이 때 이클립스는 UTF-8형식을 사용하는데 컴파일러는 MS949규칙에 따라 작성된것으로 간주하기 때문에 충돌이 일어나 컴파일 에러가 발생한다. 그렇기 때문에 windows os에서 컴파일 할때, 만약 소스파일이 os와 다른 characterset으로 저장했다면, 컴파일 할 때 알려줘야 한다. 
+ex) $javac -encoding UTF-8 Hello.java
+
+* 제어코드
+제어 명령
+줄바꿈 -> windows  0D(캐리지 리턴 -CR)0A(LF) ->타자기의 행동을 모방함, Unix/Linux 0A(라인 피드-LF) 
+
+*값 -> 2진수화 -> 메모리 저장
+
+정수(1의보수,2의보수 규칙), 부동소수점(정규화 규칙), 문자(UTF-16규칙)이렇게 다른 규칙을 이용해 값을 저장하는 데이터들의 값을 저장할 때도 같은 메모리를 사용한다.
+그렇다면 메모리에 저장된 값을 읽을 때 어떤 형태로 간주하고 읽어야 할 것인가?
+-> 메모리에 저장된 값에 대해 정보가 주어지지 않으면 어떤 형태인지 알 수 없다.
+
+* 변수 - 값을 담는 메모리. 어떤 형태의 값이 담기는지 명시해줘야 한다.
+  * ex ) 
+  int - 4byte의 정수
+  long - 8byte의 정수
+  float - 4byte의 부동소수점
+  double - 8byte의 부동소수점
+  char - 2byte의 UTF- 16코드값
+  boolean - 4byte의 ture, false를 가리키는 숫자(1,0)
+
+  **메모리에 저장하려면 무조건 2진수로 변환해야함**
+
+ 
