--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -498,4 +498,38 @@ ex) $javac -encoding UTF-8 Hello.java
 
   **메모리에 저장하려면 무조건 2진수로 변환해야함**
 
+ ---
+ #12월02일
  
+>@RestController
+@RequestMapping("/lang/literal/exam5") ->이 경로는 패키지 명과 반드시 같을 필요는 없다. 하지만 접근에 용이하기 위해 패키지 명과 동일한 경로를 표시해주는 것 뿐이다.
+public class Exam5 {
+   @GetMapping("/test1")
+  public String test1() {
+
+* 2진수를 표시하는 접두어는 0b이다.
+
+* (char)0x41 : 뒤에 놓인 값의 유형이 문자에 지정된 지정된 번호(UTF-16 - 컴파일러에 data타입을 툭 던지는 정보<.type casting,형 변환>)를 의미한다.
+
+* 인코딩과 디코딩
+  * 4 -> 00000100 ->11111100 (2의 보수 규칙에 따라 2진수화 시킴 = 인코딩, 어떤 규칙에 따라 데이터의 형태를 변환시키는 것). 
+  * '가' (UTF-16규칙이용)-> 1010 1100 0000 0000 (UTF-8규칙이용)-> 11101010 10110000 1000000
+  * 인코딩된 형태를 다시 원래의 형태로 되돌리는 것 = 디코딩
+  * 문자코드와 '' 
+    * '가'('' 연산자는 문자에 부여된 번호를 리턴한다) = '\uac00' = (char) 0xac00
+
+* Escape character
+  * "012\nabc" -> 라인피드를 의미 = 제어문자(일반문자 아니고 이스케이프 문자)
+
+
+* 스프링부트에 값을 보내는 방법
+  * http://localhost:8080/lang/varialbe/exam1/test1?name(파라미터명-값을담는 메모리)=abc(파라미터값)& tel = 010-1111-2222&gender woman
+->  http://localhost:8080/lang/varialbe/exam1=요청 URL
+
+name~woman 까지 Query String(= qs)
+
+String test 1(String(데이터 타입) name(변수명), String gender) {
+
+} =>파라미터명(?name)과 변수명이 일치해야 한다.
+
+ex04 예습하기
