--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -533,3 +533,97 @@ String test 1(String(데이터 타입) name(변수명), String gender) {
 } =>파라미터명(?name)과 변수명이 일치해야 한다.
 
 ex04 예습하기
+
+#12월 03일
+---
+
+##변수
+  - 변수란 값을 저장하는 메모리이다.
+  - **메모리를 준비시키는 명령문 작성법(변수 선언)**
+    - Data type 변수(variable) 이름;  -> String(메모리 type) str(메모리 이름);
+    - Webrowser가 요청 -> Spring Boot에서 test1예제에 요청 ->요청받은 test1 메서드에서 작업 후 Spring Boot(웹서버 내장)에 return. Spring Boot에서 Web Browser에 HTTP형태로 전달. 요청받은 test1예제는 Web Browser가 바로 호출하는 것이 아니라 Spring Boot에서 호출을 하여 test1에서 넘겨 받은 정보를 쪼개서 Web Browser에 전달한다. 
+      - ->Hyper-Text Trasfer Protocl(HTTP)
+   - **변수의 데이터 타입**
+     - 정수 
+     
+     |--|--|
+     |--|--|
+     |1byte|byte a;|
+     |2byte|short b;|
+     |4byte|int c;|
+     |8byte|long d;|
+
+     - 부동소수점
+     
+     |--|--|
+     |--|--|
+     |4byte( 7자리 까지 유효숫자)|float x;|
+     |8byte( 15자리 까지 유효숫자)|double y;|
+
+     - 논리 
+
+     |--|--|
+     |--|--|
+     |4byte|boolean v;|
+
+     -문자
+
+     |--|--|
+     |--|--|
+     |2byte|char ch;|
+
+  
+
+     --> 총 8개 데이터를 구분하는 기본타입(java pribitive data type - 자바 원시 데이터 타입)
+
+     - 레퍼런스(메모리주소를 저장)
+
+      |--|--|
+      |--|--|
+      |objcet|obj ;|
+
+* 문자 전송과 URL 인코딩
+  * 'A'라는 문자 -> Web Browser에 전송 -> 'A'(영어는 변환 없이 보낸다 -> URL을 작성할 때의 문자 사용 규칙에 따라 변한다.-RFC 3986문서에 따름 : 영어, 숫자 , 특수문자를 제외한 나머지 문자는 변환(문자에 부여된 정수값을 '%-'와 같은 형식의 문자열로 변환한다. 7bit 네트워크 장비를 거쳐갈 때 데이터가 날아가지 않도록 조치하기 위함)한다.) -> Spring Boot로 전송
+  *  '가'라는 문자 -> Web Browser에 전송 (%EA%BO%80 -이런식으로 변환되어 Spring Boot에 전송 : RF 3986 규칙에 따라 '퍼센트 인코딩'으로 변환. 영어, 숫자를 제외한 60여가지의 문자를 %인코딩함.)-> Spring Boot에 전달
+  
+  >ex) !(0x21) -> %21, #(0x23) -> %23 등..
+
+* 논리 값 전송 및 수신
+  * test / 5?b = true  -> web browser에서 1을 입력해도 true로 출력되는 이유는 Spring Boot가 변환을 해주었기 때문이다.
+
+## 배열
+
+- 같은 종류의 메모리를 여러개 만드는 명령문
+  - int a; -> 4byte 크기인 하나의 메모리 a.
+  - int a,b,c;  4byte크기인 각각의 메모리 a, b, c.(연속되지 않음)
+  - 더 많은 수의 변수를 선언 하려면 너무 많은 시간이 소요된다.
+  - 그렇기 때문에 배열을 통해 연속된 메모리를 선언해준다.
+  -> int[] age(레퍼런스 변수 - 배열의 주소를 담는 변수. 배열 메모리의 이름) = new int[30](메모리를 준비시키는 명령. -> 배열 선언); / int age[]의 형식(c/c++의 형식)으로도 선언이 가능하지만 전자의 방식이 일반적으로 사용된다.
+  - age[0] = 98;
+  - age[2] = 80;    
+  - age[29] = 100;
+   ![](./images/2021-12-03-12-52-33.png)
+
+- 배열과 메모리
+  - int a; (데이터 타입 : 데이터 종류 = 정수, 메모리크기4byte)
+  - a = 준비할 메모리를 가리킬 때 사용할 이름, 정수를 저장할 4byte크기의 메모리를 준비
+  - 만약 같은 값을 여러개 저장해야 되는 상황이라면 int age1, age2, age3, age4, age 100 ... 와 같이 유사한 이름으로 변수명을 적을 것이다. 저장할 값의 개수가 많으면 변수 선언이   더 번거로워 진다. 
+  - new data type[메모리 개수]
+  > new int[5] -> 4byte크기의 연속된 int 메모리 준비. -> index 0, 1, 2, 3, 4.
+  배열 메모리를 준비한 후 그 메모리에 주소를 리턴 -> new int[5]. int[a](int 배열주소) age(주소를 담는 변수 -참조변수(reference -> c/c++에서 pointer의 개념));
+
+  - offset address : Java vertual machine이 
+
+  - 레퍼런스와 인스턴스
+    - int[] arr1 = new int[3]; 
+    ![](./images/2021-12-03-15-17-13.png) arr1에는 200이라는 주소가 들어가 있다. 주소를 보관하는 변수를 레퍼런스라고 한다.
+    - int[] arr2; -> arr2 = arr1; : arr1메모리에 저장된 값을 arr2 메모리에 복사하라. 
+    - -> arr1[1] = arr2[1] : 메모리가 복사 되었기 때문에 같은 메모리 항목을 가리키게 된다.  
+    ![](./images/2021-12-03-15-18-43.png)  
+
+  - 배열의 초기화 : arr1 = null -> 레퍼런스(메모리의 주소)만 초기화 하는 것. 인스턴스값은 남아 있다. 
+  - 주소를 알고 있는 레퍼런스가 없어서 더이상 사용할 수 없는 인스턴스 -> garbage.(메모리 부족, cpu한가할 때 garbage colector가 제거한다.)
+  -  garbage가 생기는 즉시 처리 하는 것은 아니다. 
+  -  배열 인스턴스 자동 초기화
+     -  배열은 자동으로 초기화 되지만, 일반 변수는 초기화를 해주지 않고 사용하면 오류발생.
+     -  ex01~ ex99까지 연습해보기(복습도)
