--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -627,3 +627,83 @@ ex04 예습하기
   -  배열 인스턴스 자동 초기화
      -  배열은 자동으로 초기화 되지만, 일반 변수는 초기화를 해주지 않고 사용하면 오류발생.
      -  ex01~ ex99까지 연습해보기(복습도)
+
+## 12월 06일
+- 레퍼런스와 인스턴스 
+  - int[] age = new int[5] ; -> 배열을 저장한다는 의미가 아님. 배열이 들어있는 주소를 담는 것. 
+  - 실체를 가리키는 주소(reference). 실체 자체를 가리키는 값(instance). 배열의 인스턴스를 배열 레퍼런스에 담는다.
+  - 존재하지 않는 index번호에 접근하게 되면 array out of bound exception 에러 발생.
+   ex) 100만원이 들어있는 계좌번호, 비밀번호를 알려주면 100만원을 현금으로 주는 것이 아니라 은행에 가서 찾아쓸 수 있는 정보를 주는 것.
+- 스프링부트와 배열 파라미터
+  - 웹브라우저에서 요청한 파라미터 개수만큼 메서드의 파라미터 개수가 일치해야 한다.
+  ex) return "=>  " + name[0]+","+name[1] + "," + name[2] + ","+ name[3] + ","+ name[4] + ","+ name[5] + ","+ name[6] ;
+
+  http://localhost:8080/lang/variable/exam2/test2?name=%ED%99%8D%EA%B8%B8%EB%8F%99&name=%EC%9C%A0%EA%B4%80%EC%88%9C&name=%EC%9E%84%EA%BA%BD%EC%A0%95&name=%ED%99%8D%EB%B2%94%EB%8F%84&name=%EA%B9%80%EA%B5%AC&name=%EB%B0%95%EC%97%B4&name=%ED%97%88%EA%B7%A0
+
+- 예제 프로그램 실행 과정
+  - **일반 자바 프로그램j** : ava-lang/Exam1.class -> main호출로 직접실행
+  - **스프링 부트 프로그램** : java-lang-boot/Exam1.class -> 사용자가 웹브라우저에 요청 -> 웹브라우저에서 스프링부트에 요청 -> 스프링부트가 Exam1.class에 test1() 호출 -> Exam1.class에서 스프링부트로 리턴 -> 스프링부트에서 웹브라우저에 리턴 -> 웹브라우저에서 호출
+  - **HTML/CSS/Javascript 실행** : java-lang-boot/static/exam1.html -> 사용자가 웹브라우저에 요청 -> 웹브라우저에서 스프링부트에 요청 -> 스프링부트에서 exam1.html 읽기 -> exam1.html에서 파일 내용을 스프링부트로 그대로 가져옴 -> 스프링부트에서 웹브라우저로 가져온 내용 전달 -> 웹브라우저에서 HTML 실행 후 출력
+
+ - Java 상수 변수 
+   - final 키워드를 앞에 붙이고 변수 명은 모두 대문자로 표시(소문자로 적어도 도긴 함) 
+   - Java의 경우에는 변수 선언 후 초기화를 따로 해줘도 된다.
+   - 하지만 Javascript의 경우는 상수 변수를 선언하자마자 초기화를 해줘야한다.(그렇지 않으면 에러 발생)
+
+- 부동소수점의 형변환
+  |--|--|
+  |--|--|
+  |byte ->|int|
+  |short ->|int|
+  |int ->|long|
+   - 계산은 같은 type일 경우만 가능
+     - ex) int + int, float + float
+   - 작은 크기의 메모리 값은 큰 크기의 메모리에 저장할 수 있다. 
+
+   - 정수 메모리는 부동소수점 메모리에 저장할 수 있다. 하지만 부동소수점 메모리는 정수 메모리에 저장할 수 없다.
+   - 강제적으로 저장하려면 명시적 형변환을 해주어야 한다.
+ - Spring Boot의 자동 형변환
+   - literal 
+   
+   |literal|variable|array|
+   |--|--|--|
+   |정수 : 100, 100L, 100l|byte b;, short s ;, int i;, long l;|int arr(레퍼런스)= new int[5(인스턴스)];|
+   |부동소수점 : 3.14f, 3.14F, 3.14, 3.14d, 3.14D|float f;, double d;|--|
+   |논리 : true, false|boolean bool;|--|
+   |문자 : 'A','\u0041'|char c;|--|
+   |문자열 : "abcd"|String str;|--|
+
+- 형변환
+  - 큰 값을 작은 메모리에 저장 가능(형변환 거쳐서). but 값이 누락된다.
+  - 정수 -> 부동소수점 변수의 형변환 할 때 유효자릿수 넘어가는 값을 저장할 때 값이 누락되는 것을 주의!.
+    - ex) byte b= 100; int s = b; : 형변환 불필요.
+          int i = 100; byte x = i; : 컴파일 오류. int > byte
+          -> 명시적 형변환 필요. byte x = (byte)i;
+          float f = 31.419f; int y = (int)f;
+- 문자열을 primitive type(원시타입 : byte short int...)으로 변환하는 방법.
+
+- Spring Boot에서의 형변환
+  - 웹 브라우저에서보내는 값은 무조건 "문자열"이다(단, 파일 업로드의 경우 binary data이다). -> test1?value=100(query string) 스프링부트에서 자동 형변환해서  문자열을 byte.valueof("100")을 통해 byte값 100을 전달한다. 
+  - Spring Boot에서 문자열을 Byte.valueof, Short.valueof, Intvalueof을 통해 각 타입에 해당하는 값으로 형변환을 시켜준다.
+  - Date type은 java.sql.Date 타입을 입력하면 날짜값을 입력받을 수 있다. 
+  ![](./images/2021-12-06-15-30-37.png)
+
+  |primitive type|wrapper class|
+  |--|--|
+  |byte|Byte|
+  |short|Short|
+  |int|Integer|
+  |long|Long|
+  |float|Float|
+  |double|Double|
+  |boolean|Boolean|
+  |char|Character|
+
+  - 이클립스와 스프링부트
+    -  개발자 이클립스 실행 -> eclipse.exe(사용자 대신 메인클래스를 대신 실행시켜주는 도우미프로그램. eclipse자체는 아님) 실행 -> JVM -> 메인클래스 -> eclipse IDE 실행 -> eclipse에서 App.class 실행 -> JVM에서 APP.class 실행 -> Spring Boot 실행 -> Tomcat 서버 실행(웹서버 + 서블릿 컨테이너) 
+
+    ![](./images/2021-12-06-16-06-17.png)
+
+    ![](./images/2021-12-06-16-26-11.png)
+
+    스프링부트가 html파일(스프링부트가 다이렉트로 처리함)과 class(서블릿컨테이너와 spring webmvc를 통해 )를 다른 방식으로 처리한다
