--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -641,7 +641,7 @@ ex04 예습하기
   http://localhost:8080/lang/variable/exam2/test2?name=%ED%99%8D%EA%B8%B8%EB%8F%99&name=%EC%9C%A0%EA%B4%80%EC%88%9C&name=%EC%9E%84%EA%BA%BD%EC%A0%95&name=%ED%99%8D%EB%B2%94%EB%8F%84&name=%EA%B9%80%EA%B5%AC&name=%EB%B0%95%EC%97%B4&name=%ED%97%88%EA%B7%A0
 
 - 예제 프로그램 실행 과정
-  - **일반 자바 프로그램j** : ava-lang/Exam1.class -> main호출로 직접실행
+  - **일반 자바 프로그램j** : java-lang/Exam1.class -> main호출로 직접실행
   - **스프링 부트 프로그램** : java-lang-boot/Exam1.class -> 사용자가 웹브라우저에 요청 -> 웹브라우저에서 스프링부트에 요청 -> 스프링부트가 Exam1.class에 test1() 호출 -> Exam1.class에서 스프링부트로 리턴 -> 스프링부트에서 웹브라우저에 리턴 -> 웹브라우저에서 호출
   - **HTML/CSS/Javascript 실행** : java-lang-boot/static/exam1.html -> 사용자가 웹브라우저에 요청 -> 웹브라우저에서 스프링부트에 요청 -> 스프링부트에서 exam1.html 읽기 -> exam1.html에서 파일 내용을 스프링부트로 그대로 가져옴 -> 스프링부트에서 웹브라우저로 가져온 내용 전달 -> 웹브라우저에서 HTML 실행 후 출력
 
