--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -707,3 +707,89 @@ ex04 예습하기
     ![](./images/2021-12-06-16-26-11.png)
 
     스프링부트가 html파일(스프링부트가 다이렉트로 처리함)과 class(서블릿컨테이너와 spring webmvc를 통해 )를 다른 방식으로 처리한다
+
+    ## 12월 07일
+- 상대 경로 : lang/variable/exam4/test.html -> 현재 위치를 기준으로 함.
+- 절대 경로 :/lang/variable/exam4/test.html -> root를 기준으로 함.
+- 클라이언트 렌더링
+  - 웹 브라우저에서 test2의 실행결과 스프링부트에 요청 -> 스프링부트 test2 호출해 Exam4 실행 -> 작업 수행하여 결과값을 스프링부트에 리턴. -> 리턴받은 결과값을 웹브라우저에 응답 -> 응답받은 결과를 통해 생성, 변경, 삭제 결과를 거쳐 화면출력
+- 코드 관리가 쉽도록 코드를 묶고 분류한다 ->  코드를 function(어떤 기능을 수행하는 코드들의 묶음, function - < java에서는 method > 하나당 한개의 기능)으로 묶고, function 들을 class로 묶고, class들을 package로 묶는다.
+- String( : 기능을 수행한 후 리턴하는 값의 타입 - 리턴타입) toString( : function 이름) int i (: 기능을 수행하는데 필요한 값을 받는 변수(파라미터), 넘겨주는 값(argument))
+- java.lang 패키지에 소속된 클래스만 java.lang 생략 가능 : integer.tostring 
+- 서버에 요청할 때 사용할 도구를 준비한다.
+ var xhr = new XMLHttpRequest(); // XMLHttpRequest =XHR
+
+- 태그 용어
+  - < h1 id - "x-title">(시작태그)제목1(content) < /h1>(끝 태그)
+    - h1 : 태그명 , id : 속성명(attribute), "x-title" : 속성 값.
+    - < input readonly(속성 중에 값을  생략할 수 있는 속성이 있다. 이 경우 속성의 존재 유무에 따라 동작이 제어 된다. 값을 설정하더라도 아무런 의미가 없다.)>
+- URL 인코딩과 파라미터 값
+  -  url 에서 + 는 공백(space)를 의미한다
+  -  ![](./images/2021-12-07-12-24-14.png)
+  -  ![](./images/2021-12-07-12-24-45.png)
+  -  ![](./images/2021-12-07-12-25-21.png)
+  에러 발생.
+  ![](./images/2021-12-07-12-32-04.png)
+ 
+ |클라이언트|URL인코딩|서버|
+ |--|--|--|
+ |A|인코딩 X|A|
+ |가|%EA%BO%80|가|
+ |+|%2B|+|
+ |+|인코딩 X|공백문자로인식|
+ |?|%3F|?|
+ |?|인코딩 X|쿼리스트링 시작명령으로 인식|
+ -> 인코딩을안하면 다른 문자로 인식하는 경우들이 있다.
+ -> 알파벳, 숫자, 일부 특수문자는 URL 인코딩하지 않아도 그대로 전달 된다.
+  - 주의! 웹브라우저에서 직접 요청할 때는 URL인코딩 필요 X (웹 브라우저가 알아서 URL 인코딩 수행하기 때문)
+  - 자바스크립트를 이용해서 요청할 때는 개발자가 직접 URL인코딩을 해야 한다.
+  - 즉 URL인코딩을 하지 않았을 때 문제가 발생할 문자에 대해 반드시 URL 인코딩을 처리해야 한다.
+  - encodeURIComponent(문자열) -> URL에서 URL인코딩이 필요한 문자를 처리해주는 문법.
+
+- Front-end 핵심 API
+  - Dom API(Document Object Model) : 태그를 찾고, 태그의 속성/값을 변경, 태그를 제거 등
+
+|--|--|
+|:--:|:--:|
+|document.getEelementById(태그아이디)| 태그 객체 1개를 찾음|
+|document.getEelementsByTagName(태그명)|여러개의 태그|
+|document.getElementsclassName(클래스명)| -> 여러개의 클래스|
+|document.querySelector(css 셀렉터) |-> 한 개의 태그 객체|
+|document.querySelectorAll(css 셀렉터) |-> 여러개의 태그 객체
+|document.createElement(태그명) |-> 태그 객체 1개|
+|document.createTextNode(내용) |-> 콘텐트 객체 1개|
+|Node.appendChild(태그객체) |-> 다른 태그 아래에 자식 태그 추가|
+|Node.removeChild(태그객체) |-> 자식 태그 제거|
+|Node.textContent = 내용 |-> 태그의 콘텐트 설정|
+|Element.innerHTML = 내용(내용 안에 태그가 있다면 자식 태그를 처리한다.) |-> 태그의 콘텐트 설정|
+|HTMLInputElement.value = 입력값|--|
+|HTMLSelectElement.value = 선택한 옵션 값|--|
+
+|태그의 이벤트처리 -> 각 태그에 대해 특정 이벤트 발생했을 때 호출 될 함수(callback 함수 = event listener = event handler)를 등록|
+|:--:|
+|태그.onclick(event handler의 이름 - 이미 태그에 대해 이름이 정해져있음) = function(){...}|
+|태그.addEventListener("click"(이벤트 이름),function()(이벤트가 발생하면 호출되는 함수){...}|
+|<태그 onclick(event handler) = "자바스크립트 코드(이벤트가 발생하면 실행될 코드">|
+
+- Ajax(Asynchronous JavaScript and XML) API  - 비동기식 처리(별도의 서버 요청 작업을 수행할 때 사용)
+
+  - var xhr = new XMLHttpRequest();
+
+  - 신규프로젝트에 사용 - xhr.addEvnetListener('load'(서버에서 응답이 오면 발생하는 이벤트), function((응답이 왔을 때 호출될 함수 : 서버가 보낸 실행결과를 처리!)){...}
+
+  - 예전프로젝트에 사용 - xhr.onreadystatechange = function(){...}
+
+  - xhr.open("GET",URL, 비동기여부); : 서버에 연결
+  - xhr.send(쿼리스트링 or null)  : 서버에 요청
+  
+- CSS selector(태그를 가리키는 명령)
+ - < h1 id = 'x-title' class = 't1 t2'> < /h1>
+ - < h1 id = 'x-name' class = 't1 t3'> < /h1>
+ - < h1 id = 'x-tel' class = 't2'> < /h1>
+   - -> #x-title : 태그 아이디, h1 : 태그 이름, .t2 : 클래스 이름
+   
+
+- JSON(J-avaS-cript O-bject N-otation) 형식의 문자열
+  - Javascript의 객체 초기화 문법(Object initializer)을 모방해서 만든 데이터 형식
+- 클라이언트가 요청한 것을 처리하는 메서드(리퀘스트 핸들러)가 들어있는 클래스를 페이지 콘트롤러라고 부른다. 
+- 메시지 컨버터(기본 :Jackson, JSON가 스프링부트에 있다.)를 통해 가공한 정보를 스프링부트가 받아서 클라이언트에게 응답한다.
