--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -793,3 +793,77 @@ ex04 예습하기
   - Javascript의 객체 초기화 문법(Object initializer)을 모방해서 만든 데이터 형식
 - 클라이언트가 요청한 것을 처리하는 메서드(리퀘스트 핸들러)가 들어있는 클래스를 페이지 콘트롤러라고 부른다. 
 - 메시지 컨버터(기본 :Jackson, JSON가 스프링부트에 있다.)를 통해 가공한 정보를 스프링부트가 받아서 클라이언트에게 응답한다.
+
+  ## 12월 08일
+  ---
+- 스프링부트에서 결과 리턴 : 스프링부트가 웹브라우저에서 요청받으면 메서드 호출 -> 메서드에서 request handler를 통해 요청 처리
+
+- 배열 ->JSON문자열 
+  - new String[] {"aaa",bbb"} -> [ "aaa", "bbb"]
+  - new String[] {100,200} -> [ 100, 200]
+
+- 자원(resource)과 그 자원을 가리키는 주소(Uniform Resource Locator : 단일화된 자원에 대한 위치정보)
+
+- 컴퓨터 A < - > 컴퓨터 B
+   APP1    <--->      APP1
+   APP2    <--->      APP2
+   APP3    <--->      APP3
+  - 다른 APP에 요청을 하는 APP을 client app, 요청을 받고 처리하여 응답하는 App을 Server app이라고 한다.
+  - Server app의 주소가 자주 변한다면 상대방에게 혼란을 줄 수 있다. 그래서 Server는 정적 IP주소를 써야한다. Client는 동적 ip를 사용한다.
+
+서로 다른 APP은 각자의 고유 포트번호를 가지고 있어서 어떤 APP이 데이터를 요청했는지 포트로 구분하여 요청한 APP에 데이터를 보낸다.
+- 데이터를 주고받을 때 데이터에는 DATA내용, 보내는 이의 IP주소,       PORT번호와 받는이의 IP(인터넷 프로토콜)주소, PORT번호가 포함되어 있어야 한다.(이러한 정보들을 packet이라고 한다.)
+  - 하지만 데이터 용량이 커질 때는 한 패킷에 모든 데이터를 보내지 않고 일정 단위크기로 나누어서 보낸다. 나누어서 보낸 데이터들이 모두 도착했을 때 원래의 데이터 하나로 합쳐서 요청한 곳에 전달한다.(오퍼레이팅 시스템의 구조)
+  - 8080 port는 웹서버가 아니라 프록시 서버이다.
+  - "/lang/variable/exam4/test3" ->고정자원
+  - //http://localhost:8080/lang/variable/exam4/test3_6.html ->동적자원
+
+- int i = 5; int j = 2. float r =i / j => 결과는 2.0
+  - int, int의 연산결과는 int값이 나온다. 자바의 연산단위는 무조건 int이다.
+    - byte ( -> int로 변환) + short ( -> int로변환) => int
+    - int + long : 단위가 다르면 연산할 수 없다. -> int를 long으로 변환 후  연산결과는 long
+    - int + float = 정수를 부동소수점으로 변환 후 연산결과는 float
+    - long + float -> 정수를 float로 변환후 연산결과는 float ( : 큰 메모리를 작은 메모리로 바꿨기 때문에 값이 짤릴 수 있다.)
+    - **다른 타입끼리는 연산 불가!!**
+    - **다른 타입일 경우 형 변환(암시적 형 변환)후 연산수행**
+    - 형변환을 한다고해서 int메모리가 float메모리로 바뀌는 것은아니고 임시 메모리로 바꾸어서 임시적으로 저장하는 것이다.
+    - 두개의 정수 값 중 한개만 float으로 형변환해도 된다. 암시적으로 형변환 하도록 유도하기 때문
+      - ex) r = i/ (float)j = (float)i / (float)j
+- int x = Integer.MAX_VALUE; // 0x7fffffff = 약 +21억
+    int y = Integer.MAX_VALUE; // 0x7fffffff = 약 +21억
+   - int r1 = x + y; // 0x7fffffff + 0x7fffffff = 0xfffffffe = -2 
+   - long r2 = x + y;  // 0x7fffffff + 0x7fffffff = 0xfffffffe = -2
+     -  -> 이 문제를 해결하기위해선 r2 = (long)x + (long)y; 형변환을 해줘야 한다
+
+- 산술 연산자(+, - ,* ,/ ,%)
+  - 정수의 기본 연산은 int이다.
+  - 같은 타입이어야만 연산가능 (다른 타입일 경우 암시적 형변환 : 작은메모리 타입 -> 큰 메모리타입 / 정수 -> 부동소수점 / 연산자 우선순위에 따라 변환) -> 타입을 일치 시킨후 연산해야 한다(명시적 형변환 수행 가능)
+    - ex) i + l , l + f, f + i/i (암시적 형변환)
+          (float) i (명시적 형변환)
+- 연산자 우선순위
+  - 1순위 () 2순위 ++a, a-- 3순위 *, /, % 4순위 +, -
+- boolean 에서의 부동소수점 비교
+  - double d1 = 987.6543;
+    double d2 = 1.111111;
+    System.out.println((d1 + d2) == 988.765411);
+-> 결과는 false : IEEE규칙 때문에 맨 끝자리에 극소수점이 붙기 때문에 오차 발생.
+- double EPSILON = 0.00001;
+    System.out.println(Math.abs((d1 + d2) - (x + y)) < EPSILON);과 같이 따로 처리를 해줘야 한다.
+    - abs : 절대값, 양수로 괄호안의 숫자를 바꾸라는 명령.
+      ex) Math.abs((f1 + f2)
+
+- 비교 연산자(<, <=, > , >=, ==,!=)
+  - 부동소수점 비교시 예측 결과와 다른 경우를 조심!
+    - folat f1  = 12.321f;
+    - float f2  = 1.1f 
+      - 둘의 합 = 13.421f ? no! 13.421(0005 -> IEEE754 규칙에서 부동소수점을 2진수로 바꿀 때 극소수의 값이 붙기 때문) -
+      - 13.4210005 - 무시할 값 = 최종결과 이런식으로 정확한 값을 구해야 함.
+ 
+- 논리연산자 
+  - 정수에 대해서 논리연산자 AND OR NOT은 안돼지만 ^는 정수값에대해 사용하면 논리연산자가 아닌 비트 연산자로 작동하게됨. 두 피연산자의 비트가 같으면 0, 다르면 1이 된다.
+  ex)  
+  00000000_00000000_00000000_00000010 (2)
+  00000000_00000000_00000000_00000011 (3)
+  ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ         
+  00000000_00000000_00000000_00000001 (1)
+  
