--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -866,4 +866,21 @@ ex04 예습하기
   00000000_00000000_00000000_00000011 (3)
   ㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡㅡ         
   00000000_00000000_00000000_00000001 (1)
-  
+
+  - ex5예제에 351번 확인하기.
+ - 비트 연산자
+   - int 타입의 값에 대해 비트 이동을 할 때는 0 ~ 31까지만 유효하다.
+     만약 31을 넘는 경우 32로 나눈 나머지 값을 비트 이동으로 간주한다.
+     ex)
+        system.out.println(3 << 33); // 6
+        System.out.println(3 << 65); // 6
+        System.out.println(3 << 97); // 6
+
+        33 % 32, 65 % 32, 97 % 32 -> 모두 나머지가 1이다.
+    - 비트 이동 연산 응용
+      - 특정 위치의 바이트값을 추출할 때
+      ![](./images/2021-12-08-16-29-05.png)
+
+  - 조건 연산자
+    - 삼항연산자라고도 한다.
+    - 조건(boolean) ? 표현식1(true일 때 실행) : 표현식2(false일 때 실행)
