--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -884,3 +884,165 @@ ex04 예습하기
   - 조건 연산자
     - 삼항연산자라고도 한다.
     - 조건(boolean) ? 표현식1(true일 때 실행) : 표현식2(false일 때 실행)
+
+# 12월 09일
+---
+
+- 증감 연산자
+  - 전위 연산자(++i)
+    -  int a = 100 ; 
+        ++a; -> 컴파일 시에 변환된다.
+        다양한 프로그래밍 언어들로 만들어진 코드는 컴파일 시에 기계어로 바뀌게 된다.(각기 다른 언어들의 특징들이 있지만, 결국은 모두 공통적으로 기계어로 바뀌게 된다는 의미.)
+
+            ++a;와 a = a+1; 은 같은의미.
+            여기서 "=" 는 assignment operator(할당연산자, 
+            배정연산자) 라고 한다.    
+            a(left-value -메모리 :l-value) = a + 1;
+            (right-value-값 :r-value)
+            반드시 l-value는 메모리, r-value는 값이어야 한다. 
+            100 + 1을 먼저 연산한 후 왼쪽에있는 l-value에 
+            저장한다는 의미.
+            
+  - 후위 연산자(i++)
+    - int a = 100; 
+        a++; -> 먼저 임시 변수가 만들어진다. 
+         - int temp = a;
+           a = a+1; 
+           a? -> 101
+        
+        a--; 
+
+        - int temp = a;
+          a = a-1;
+          a? -> 99
+    - int a = 100;
+      int b;
+      b = ++a;
+
+            **r-value가 모두 실행된 후 할당연산자 '='가 실행된다.
+            즉 b = ++a;는 컴파일 시에  a = a+1;, b = a; 
+            순서로 실행.
+            
+
+    - int a = 100;
+      int b;
+      b = a++;
+
+            b = a++; -> int temp = a(100);
+            a = a+1;(101)
+            b = temp(100);
+            a = 101;
+            b = 100; 
+    
+    - 메서드 호출 (System.out.println과같은)전에 파라미터로 주어진 표현식을 먼저 실행한다. 
+    
+    int a = 100;
+    a++; 
+    System.out.println(a) -> 100출력 왜? : int temp = a; 임시메모리에 a값 저장 -> a = a+1 -> System.out.println()에는 현재 int temp값 = 100이 저장되어 있다. 따라서 메서드 호출 결과는  System.out.println(a) = 100 이다.
+
+- 부동소수점의 쓰레기값 처리
+  - https://hayeon17kim.github.io/posts/floating-point-epsilon/ - 참고하기
+
+- 조건문
+  - if(조건); -> 조건문 뒤에 ";" 를 포함하게되면 if 문을 **빈문장**으로 처리한다.
+  - 조건에는 boolean값만 와야한다. if(a=100) -> 불가능. if(b=true) -> 가능.
+  - else : else statement는 단독으로 실행할 수 없다. if문과 함께 실행 되어야 한다.
+  - else문은 가장 가까운 if문에 소속 된다.
+          
+        - if (age >= 19)
+            if (age >= 70) 
+             System.out.println("지하철 무임승차 가능합니다.");
+            else  
+            System.out.println("미성년입니다.");
+
+           System.out.println("------------------------------");
+           
+           -> else는 두번 째 if에 소속된다.
+- **java.io.InputStream keyboard = System.in;** :
+-  키보드로 입력한 데이터를 읽을 때 사용할 도구 준비 ->ex99 210번 참고
+
+- 키보드 입력 다루기
+  - System.in : in = 키보드 입력 도구
+  
+  - System.out : out = 콘솔 출력 도구
+
+          System.out.print("float: ");
+          float f = keyScan.nextFloat();
+
+          System.out.print("boolean: ");
+          boolean b = keyScan.nextBoolean();
+
+          keyScan.close();
+
+          System.out.printf("%d, %f, %b\n", i, f, b);  
+
+          -> float에 일반 정수값을 넣어도 알아서 float의 유효자리수 7자리까지 출력한다.
+          -> boolean 값에는 true,TRUE,flase,FALSE 입력가능하고 1,0은 불가능하다.(1,0은 Spring Boot에서만 가능)
+  - 키보드 입력 다루기 - nextInt / nestLine
+    - 사용자 입력 => 100
+    - nextInt() -> 첫번 째 문자열을 토큰(엔터, 스페이스, 텝 등)을 만나기 전까지 읽어온다. "100" 
+    - nextLine() -> nextInt는 한 토큰을 읽으면 엔터를 읽기전의 상태로 돌아가기 때문에 아직 엔터가 남아있는 상태가 된다. 그렇기 때문에 nextLine이 엔터를 읽어서 공백을 출력하게 된다.
+    - 따라서 keyboardScanner.nextLine();를 추가해서 nextLine이 정상적으로 키보드를 입력받을 수 있는 상태로 만들어줘야 한다.
+
+
+              char c;
+                c = 'A' -> A라는 문자에 부여된 번호 0041(2byte) , 65 
+                UTF-16규칙 65가 c에 저장된다.
+                문자 자체를 저장하는 것이 아니라, 유니코드번호를 저장하는 것이다.
+- switch case 조건문
+  - case문에 리터럴값만 올 수 있다, 즉 변수를 사용할 수 없다. But 상수 final을 사용하면 case문에 미리 선언해둔 상수를 사용할 수 있다.
+  - case에 올 수 있는 리터럴에는 string, int 등이 있다.
+
+              int x = 1, y = 300;
+              switch(x) {
+                case 1 * 300(가능)
+                case 1 * y(불가능)
+              }
+              final int = x;
+              switch(x){
+                case x
+              }
+  - swich의 조건에는 4byte를 넘어가는 값, 부동소수점, boolean값 사용 불가.
+   즉, byte, short, int, char만 사용 가능하다.
+  - swtich 문에서 enum으로 정의된 상수를 사용하면 코드의 안정성을 높일 수 있다.
+  **ex06 예제321번 홀수, 짝수 비트연산자 &으로 판별하는거 확인하기**
+    -> x % 2 보다 x & 1이 연산속도가 빠르다.
+
+          while (count < 100) {
+            count++;
+              if ((count & 1) == 0) // count & 1 ==> count & 0x01 ==> count % 2
+                  {               
+                  sum += count; 
+                      짝수, 홀수를 구별할 때 비트 연산자 &을 이용해 맨 끝에 
+                      있는 비트가 0인지1인지를 판별한다. 0이면 짝수, 1이면 
+                      홀수. 16 8 4 2 1 -> 이런식으로 비트는 증가하기 때문에
+                      1을 제외한 나머지는 모두 짝수이다, 그래서 맨끝 비트로만
+                      판단한다.
+
+  - continue 사용
+
+                while (conut < 100) {
+                  conutn ++;
+                    if((count % 2)==1)
+                    continue;
+                    sum += count;
+
+                }                
+      위 코드와 아래 코드의 결과는 같다.
+      
+
+
+- while 반복문
+  - while(조건) {
+     수행할 작업
+  }  
+
+- for 반복문
+  - for문 안에 있는 변수는 for문이 끝나면 밖에서 사용하지 못한다. 그래서 for문 밖에 변수 선언해놓고 for문에서 초기화해주면 된다.
+  
+            int x;
+            for(int x = 1 ...)
+    
+    
+    
+    331번예제 라벨반복문 확인하기 
