--- a/memo/생활코딩.md
+++ b/memo/생활코딩.md
@@ -58,4 +58,45 @@
     - () -> ++, --, ~, ! -> *, /, %, -> +, - 순으로 연산을 수행한다.
   - 비교연산자
     - true, false 
+
+# 12월 09일
+---
+- 조건문
+  - if(true or false) {
+        then statement
+      System.out.println(1);
+      System.out.println(2);
+      System.out.println(3);
+    }
+    System.out.println(4);
+  
+    -> if안의 조건이 true이면 then statement을 실행시켜라.
+    조건이 false이면 then statement를 실행하지 않는다.
+    
+    위의 예제에서 if의 조건이 true이면 console에 1,2,3,4가 차례대로 출력된다.
+    하지만 조건이 false이면? 괄호안의 1,2,3은 출력되지 않고 괄호 밖에 있는 4만 출력되게 된다.
+    이것을 else를 사용하여 코드를 작성하면
+
+          if(true) {
+        then statement
+         System.out.println(1);
+         System.out.println(2);
+         System.out.println(3);
+         } else {
+           System.out.println(4);
+         }
+    이렇게 작성할 수 있다.
+  - else if
+   
+        - if(true or false) {
+           statement 1
+         } else if(true or false) {
+           statement 2
+         } else(true or false) {
+           statement 3
+         }
+    else if를 사용하면 더 다양한 조건들을 사용할 수 있다. 
+    - if의 조건이 참이면 statement1실행, 거짓이면 else if문 진입
+    - else if의 조건 참이면 statement 2실행, 거짓이면 else문 진입.
+    - else의 조건이 참이면 statement3 실행. 거짓이면 else문 종료.
   
