--- a/memo/생활코딩.md
+++ b/memo/생활코딩.md
@@ -100,3 +100,17 @@
     - else if의 조건 참이면 statement 2실행, 거짓이면 else문 진입.
     - else의 조건이 참이면 statement3 실행. 거짓이면 else문 종료.
   
+# 12월 15일
+## Javascript
+- 배열
+  - 배열명.push() : 배열에 데이터 추가
+  - 반복문을 통해 배열 반복하기
+  ```javascript
+  var array = [1,2,3,4,5]
+  var i = 0 ;
+  while(i < array.length){
+    console.log(array)
+  }
+  배열명.length를 통해 배열의 크기가 바뀔 때마다 조건문의 범위를 수정할 필요없이 자동으로 배열 크기만큼 반복하는 작업을 수행할 수 있다.
+  ```
+  
