--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -1044,5 +1044,240 @@ ex04 예습하기
             for(int x = 1 ...)
     
     
+# 12월 10일
+---
+- 배열 변수 선언과 동시에 배열 초기화를 할 때는 new String[] 생략 가능
+ -> String[] names = {"..."}
+
+- 배열과 ArrayList
+  - ArrayList는 배열이 꽉차면 자동으로 배열을 확장한다. ArrayList는 배열을 간접적으로 다룬다.
+    - 기존보다 더큰 새 배열을 생성
+    - 기존의 배열 값을 새 배열로 복사
+    - 기존 배열 대신 새 배열사용
+    - 배열의 항목을 삭제할 때 다음 항목을 자동으로 앞으로 옮긴다.
+    - 배열의 특정부분을 추출할 수 있다.
+-> 배열을 상요할 때 유용한 기능1(메서드)를 제공. 이렇게 목록을 다루는 클래스를 "컬렉션 API" 라고 부른다.
+  - 배열을 직접 다룰 때는, 배열을 선언한 후 크기를 조정할 수 없다.
+  ```java
+   ArrayList list = new ArrayList();
+    list.add("홍길동");
+    list.add(3.14f);
+    list.add(true);
+    list.add(365);
+    -> 이렇게 배열이 선언된 후에도 추가할 수 있다. 
+    서로다른 타입의 데이터도 보관 가능
+    (크기가 가변적)
+    for (int i = 0; i < list.size(); i++)
+      System.out.println(list.get(i));
+    -> 컬렉션 인덱스에 접근하는 방법
+  ```
+
+- 배열의 처음부터 끝까지 꺼내는 방법
+- for(배열에서 꺼낸 값 저장할 변수 : 배열주소)
+  - 단순히 배열의 처음부터 끝까지 꺼내는 작업이라면 이 방법이 더 간편하다.
+  - 이 경우 변수 선언은 for문 안에 해주어야 한다.
+  ```java
+  for(String name(꺼낸 배열 저장소) :names(배열 주소))
+  ```
+- 로컬 변수로 메서드 호출(실행) 될 때 생성된 호출 끝난 후 삭제된다.
+- 다른 메서드의 로컬 변수를 사용할 수 없다.
+  
+  # 12월13일
+  - 변수, 배열, 연산자, 제어문 활용
+    - 연락처 관리 구현하기
+    - Front-end :  static/index.html   
+                    /contact/index.html(연락처 메인화면(연락처 목록 출력)), form.html(연락처 입력화면), view.html(연락처 상세보기 및 변경 화면)
+    - Back-end : ContactController
+                  - list(목록 데이터 제공)
+                  - add(입력처리)
+                  - get(연락처 상세정보 제공)
+                  - update(정보변경처리)
+                  - delete(삭제처리)
+    - < b>콘텐트< /b> 이 전체를 요소(element)라고 함.
+    - fetch(url).then(함수 -> 서버로부터 응답을 받으면 ).then(함수 -> 이전 then안에 있는 함수의 작업이 끝나면 호출됨.) 주면 서버와 연결 -> 서버에 요청 -> 서버로부터 응답받음.
+
+  - 리팩토링(refactoring) : 소스코드 관리를 용이하도록 변경하는 것.( 함수의 리턴 값을 받는 변수를 한 번만 사용할 경우, 변수 대신 함수 호출을 삽입하라!)
+  - 최적화(optimizing) : 실행 횟수를 줄이고, 실행 속도를 높이는 방향으로 소스코드를 변경하는 것.
+  - tag객체 
+    - 기본변수(attribute)
+    - id, type, name
+    - onclick, onchange, onkeydown -> 리스너에서 변수를 찾을 때 로컬 변수가 없을 경우 태그 객체에서 찾는다. 태그 객체가 없다면, window 객체(글로벌 객체)에서 찾는다.
+    - 배열의 값 리턴
+  - 객체
+    - 값이 들어있는 상자
+
+
+# 12월 14일
+- HTML에서 Javascript는 < script >태그 안에 두어야 한다
+  - Java 
+    - static type binding
+    - int a;(고정-static)
+  - Javascript
+    - var a;(undefined)
+    - dynamic type binding(값을 변수에 넣는 순간 변수의 타입이 결정된다). 변수의 타입은 값에 따라 바뀔 수 있다.
+    - Javascript 상수변수 const는 선언과 동시에 초기화를 해줘야한다. 
+    ```javascript 
+    const PI;
+    PI = 3.14; -> 불가능. const PI = 3.14; -> 가능
+    ```
+    - 파라미터(Parameter)와 아규먼트(Argument)
+    ```javascript
+    function plus(a,b){
+      return a+b;
+                  }
+      var result = plus(100,200); 
+      a,b = parameter(아규먼트를 받는 변수), 
+      100,200 = argument(함수를 호출할 때 넘겨주는 값)
+      실무에서는 혼용하여 사용한다.            
+      ```
+    - 함수 이름과 함수 객체
+    ```javascript
+    function plus(a,b){...}
+    파라미터 : a,b -함수 객체의 주소를 가지고 있는 레퍼런스이다.
+    코드 : {...}
+    ->함수에 대한 정보와 코드를 담은 객체생성
     
-    331번예제 라벨반복문 확인하기 
+    ```
+
+- 설계도 기반 객체 생성
+  - Java 
+  ```java
+  class Score{
+    String name;
+    int kor;
+    int eng;
+    ->new Score()
+    int, String과 같은 설계도면이 필요하고
+     그 도면대로 객체를 생성한다.
+    } 
+    ```
+    ![](./images/2021-12-14-12-37-46.png)
+
+- 프로토타입 기반 객체 생성
+  - Javascript
+  ```javascript
+    new Score()
+    var obj1 = new Object //object() 틀을 기반으로 기본 객체를 생성
+    obj1.name = "홍길동"; 
+    obj1.age = 20; // => obj1.put("age", 20);
+    obj1.working = true
+    console.log("안녕하세요, " + this.name + "님!");
+    }; //this는 obj1이라는 같은 객체 내에 있는 name이라는 프로퍼티를 가리킨다.
+    //this.name이 아니라 그냥 name만 치면
+    //함수 안에 있는 변수를 먼저 찾고
+    //함수 안에도 없으면 함수 밖에 있는 name을 찾고
+    //밖에도 없으면 obj1객체 안에 있는 name을 찾는다
+    ->기본 객체에 프로퍼티를 덧붙인다.
+    설계도면이 필요 없이 원형객체를 복제해서 메모리를 덧붙인다.
+  ```
+  ![](./images/2021-12-14-12-39-20.png)
+
+ ```javascript
+
+      var tag1 = document.getElementById("btn1");
+      //querySelector와 다르게 #을 쓰지않고 id자체만 입력.
+  ```
+- < script >태그 안에 있는 코드 실행 중 오류가 발생하면 즉시 해당 script 태그의 실행을 멈추고 다음 script태그로 넘어가 실행한다.
+- not defined : 변수 선언이 안됨.
+- undefined : 변수 선언은 됐지만, 값 할당이 안됨.
+- 호이스팅 : 스크립트를 실행하기 전에 변수 선언을 스크립트 최 상단으로 끌어 올려서 하는 것.
+![](./images/2021-12-14-16-33-08.png)
+해당 스크립트 태그의 변수에만 해당.
+- 외부 소스와 실행
+![](./images/2021-12-14-16-46-10.png)
+
+# 12월 15일
+- Spring Boot와 기본 패키지
+  - Spring Boot가 클래스를 인식하는 기본 범위는 Spring Boot를 실행시키는 App 클래스 패키지에 한정한다.
+  ![](./images/2021-12-15-10-14-40.png)
+  - @ComponentScan("com.eomcs.study2")
+    - 스캔할 패키지 명을 괄호 안에 적어준다.
+    - @ComponentScan({"com.eomcs.study2","com.eomcs.study"}) 배열형식으로 여러개를 지정할 수도 있다.
+  - form 에 action 설정하지 않으면 현재 html파일url에 요청을 한다.(기본 메서드는 get메서드) - ex00 = 05_2예제(10시46분 녹화)
+  - button의 타입을 설정하지 않으면 서브밋 타입이다. 서브밋을 누르게 되면 버튼이 소속되있는 form의 입력값에 대해서 서버에 요청할 때 입력값을 보내게 된다. 
+  - form 태그에 action으로 설정된 url로 보내게 되는데 설정되어 있지 않으면 현재 url을 주소로 사용하게 된다. 
+  ![](./images/2021-12-15-10-48-37.png)
+
+- ex02 - literal
+  - Javascript 변수 선언
+    - var v7 = "윤봉길", 
+          v8 = 100, 
+          v9 = true;
+    - 글로벌변수
+      - 함수 안에 글로벌 변수와 같은 이름의 변수가 있을 경우, 가까이에 있는 변수가 우선이다.
+      ```javascript
+      var v1 = 홍길동;
+      function f1() {
+        var v1 = 100;
+        ->v1 = 100; 이다.
+      }
+      ```
+    - 로컬변수
+      - 함수 안에 선언된 변수를 의미
+      ```javascript
+      function f1(){
+        var v1 = 0
+        var v2 = 1
+        var v1,v2는 function f1에서만 사용되는
+         로컬변수이다.
+      }
+      ```
+    - 상수변수
+      - 상수변수는 한 번 선언되면 값을 중복선언, 값 변경이 불가하다.
+    - Javascript에서는 Java와 달리 문자, 문자열 구분없이 선언가능.
+    - 부동소수점에도 f,d 등을 붙이지 않는다.
+    - 변수의 타입 확인하기 : typeof 변수명
+    - Javascript에서 "use strict" 를 script의 가장 첫 문장에 선언하면, 변수를 선언하기 전에 사용할 수 없다.
+    ex) v3 = 100; 
+        console.log(v3); // 실행 오류!
+    - 호이스팅 
+      - // 변수 선언을 하기 전에 그 변수를 사용하는 코드를 먼저 둘 수 있다.
+      v2 = "임꺽정";
+      console.log(v2);
+      var v2; // 변수 선언은 항상 script 태그를 실행할 때 제일 먼저 실행된다.
+- 배열 생성
+  ![](./images/2021-12-15-14-38-01.png)
+- Javascript 에서 배열의 인덱스 넘버는 객체의 키 값이다
+![](./images/2021-12-15-15-09-50.png)
+- Javascript의 배열은 객체로 이루어져있다. 배열의 인덱스 번호는 변수이름과 같은 의미이다. 
+- 호출한 변수가 객체내에 존재하지 않을 때는 undefined가 된다. 
+- 일반 변수가 선언되어 있지 않을 때 호출하면 is not defined이다.
+- < a(태그) href(속성-attribute)>
+- obj(객체-레퍼런스).kor(property-객체에 소속된 변수) =100;
+- obj.sum(method - 객체에 소속된 함수) = function(){...};
+- Java
+   ```java
+    class Score{
+      String name(field = 변수);
+    }
+    ```
+- 배열 만들기 [,,]
+  - var arr = ["aaa", "bbb","ccc"];
+   ```javascript
+    var arr = ["aaa", "bbb", true, 100];
+    var i;
+    for (i in arr) { // i 변수에 저장되는 것은 
+    배열의 인덱스이다.
+	  console.log(i, arr[i]); 
+    ```
+    ![](./images/2021-12-15-16-16-06.png)
+  - destructuring 문법
+    ```javascript
+     var arr = ["홍길동", "1111-2222", true, 20];
+     var [name2, tel2] = arr;
+    console.log(name2, tel2); 
+    ```
+    ![](./images/2021-12-15-16-30-07.png)
+    - 객체에 들어있는 값을 분해해서 받을 때는 {}를 사용
+    -> var {name,sum,aver} = obj;
+       obj.name = "홍길동"
+       obj.a = 90
+       obj.b = 100
+       obj.c = 80
+       obj.sum = 270
+       obj.aver = 90
+       name에는 홍길동, sum에는 270, aver에는 90. 같은 이름을 가진 프로퍼티의 값이 할당된다.
+
+       ex02 15~22까지 복습
+
+  
