함수 개념정리

--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -1278,6 +1278,205 @@ ex04 예습하기
        obj.aver = 90
        name에는 홍길동, sum에는 270, aver에는 90. 같은 이름을 가진 프로퍼티의 값이 할당된다.
 
-       ex02 15~22까지 복습
+# 12월 16일
 
-  
+## 함수
+
+- 함수의 파라미터도 로컬변수이기 때문에 함수 호출이 끝나고나면 제거된다.
+- 함수에 파라미터를 주지 않고 호출하면 함수의 리턴값이 호출된다.
+
+```javascript
+console.log(function())
+function()이란 함수의 리턴값을 출력.
+```
+- 리턴값이 없는 함수를 출력하면 undefined를 출력하게된다
+- 파라미터 = 함수가 작업하는데 사용할 값을 받는 변수
+- 아규먼트 = 함수를 호출할 때 전달하는 값.
+![](./images/2021-12-16-09-54-43.png)
+
+- 파라미터 개수 < 아규먼트 개수 : 파라미터 개수를 초과하는 아규먼트 값을 전달해도 오류는 발생하지 않는다.
+- Java에서는 메서드 오버로딩이 가능하여 동일한 이름의 함수가 존재 가능하다.
+- 하지만 Javascript에서는 오버로딩을 지원하지 않아 같은 이름의 함수가 존재할 수 없다.
+- 그래서 제일 마지막에 정의된 함수가 최종적으로 존재하게 된다.
+
+```javascript
+function f1(a) { 
+	console.log("f(a)==>", a);
+}
+function f1() {
+  console.log("f()==>", "호출됨!")
+}
+function f1(a, b, c) {
+  console.log("f(a,b,c)==>", a, b, c)
+}
+-> 마지막 f1(a,b,c)가 출력된다.
+```
+- Javascript의 모든 함수는 arguments라는 배열과 유사한 변수를 내장하고있다.
+- arguments는 함수를 호출할 때 전달할 값들을 보관하는 역할을 한다.
+- 생성자, 객체, Prototype
+![](./images/2021-12-16-10-19-55.png)
+-https://doitnow-man.tistory.com/132#t1 생성자함수 참고하기
+![](./images/2021-12-16-10-30-56.png)
+prototype을 초기화한 대상이 Array이면 배열이고
+![](./images/2021-12-16-10-32-02.png)
+Array가아닌 다른 대상이면 배열이 아니다.
+
+- 함수의 arguments에는 넘어 오는 모든 값이 저장되어 있다.
+```javascript
+function f1(a) { 
+	console.log("a =", a);
+  console.log(arguments);
+  f1(100, 200, 300, 400);
+	console.log("----------------");
+
+}
+```
+![](./images/2021-12-16-10-35-46.png)
+- 함수의 주소를 값처럼 다룰 수 있다.
+  ```javascript
+  function f1(str){
+    console.log(str);
+  }
+  var f2 = window.f1;
+  f2("안녕");
+  ```
+- 함수 객체
+  - 객체 = key : value
+  - 함수 = 객체 + 함수코드
+    - key : value {함수코드...} => 함수가 들어있는 객체이다.(함수또한 객체이다.)
+  ```javascript
+  function f1(str){
+    console.log(str);
+  }
+  f1.age = 20;
+  f1.working = true
+  console.log(f1.age, f1.worknig)
+  ```
+  - 함수의 정의와 실행
+    ```javascript
+    var f1;
+    f1 = function(a) { 
+  	console.log(a + "님, 안녕!");
+    }; //->함수를 정의하는것. 실행 x
+    f1("홍길동"); //정의한 함수를 실행시키는 명령(함수 호출 - call)
+    ```
+  - 함수의 호이스팅(hoisting)
+    ```javascript
+    f1();
+
+    function f1() {
+      console.log("안녕!");
+    }
+    -> 함수를 정의하기전에 실행해도 오류가 발생하지 않는 이유 = 호이스팅. 실행하면 함수의 정의를 맨위로 끌어
+     올린다.
+    하지만 함수를 호출한 해당 스크립트가아닌, 다른 영역의 스크립트의 함수를 호출하게 된다면 오류가 발생한다.
+    <script>
+    f1();
+    f2();
+    </script>
+
+    <script>
+    function f2() {
+      console.log("안녕2!");
+    } 
+    --> 오류 발생.(다른 영역의 스크립트에서 함수를 정의하기 전에 호출했기 때문)
+    </script>
+     ```
+  - 익명함수는 호이스팅되지 않는다.
+  - 호이스팅은 선언만 위로 올라가고 값의 할당은 분리되서 제자리에 남는다.
+- Jquery는 크로스 브라우저 기능을 제공한다.(브라우저의 종류를 구분하지 않고 작업을 수행할 수 있다.)
+- call back 함수
+  ```javascript
+  function play(cb) {
+    console.log("계산 결과 =", cb(100, 200));  // 콜백 함수
+  }
+  function plus(a, b) {return a + b;}
+  function minus(a, b) {return a - b;}
+  play(plus); 
+  play(minus);
+  -> 호출될 함수를 파라미터로 넘긴다. (plus, minus함수 객체가 가지고 있는 주소를 넘기는것) 
+  그러면 함수 play()가 호출할 것이다.
+  ```
+- 함수 안에서 함수를 만들어 리턴할 수 있다.
+  - 함수 안에서 정의한 함수를 클로저(closure)라고 한다.
+  - 클로저 개념 공부하기.
+    ```javascript
+    function outer(){
+      var closure = /*function() {
+        return closure;*/ 이 부분을 closure라고 한다
+        (함수 안에서 정의한 함수)
+      };
+    }
+    ```
+   - closure에서 바깥함수의 로컬 변수를 사용할 때, 바깥 함수의 호출이 끝나면 해당 로컬 변수가 제거되기 때문에 closure는 존재하지 않는 변수를 사용하는 상황이 발생한다.
+   - 떄문에 closure에서 사용하는 바깥 함수의 로컬 변수는 closure의 별도 메모리에 복제된다.
+     - closure와 local vairable
+       ```javascript
+       function createGreeting(name){
+         var message = name + "님 환영!";
+         var fn = function(){
+           console.log(message(closure의 로컬변수가 아닌 closure를 만들어주는 바깥함수의 로컬 변수이다));
+         }
+         return fn;
+       }
+       var test1 = createGreeting("홍길동");
+       var test1 = createGreeting("임꺽정");
+       
+       test1();
+       test2();
+        파라미터, var message 또한 로컬변수이다.
+        함수 호출이 끝나면 그 함수가 만든 로컬변수도 
+        제거된다.(name, message)
+        하지만 closure는 바깥 함수의 로컬변수를 사용하면
+        , closure 자체 메모리에 같은 이름, 값을 복제해두기
+         때문에 호출이 끝난 함수의 로컬변수가 
+         사라지더라도 그 변수를 복제한 값을 사용할 수 있는것이다.(제거된 로컬변수에 접근할 수 있다라는 개념이 아님)
+       ``` 
+      - closure간의 복제 변수 공유
+        }
+- 함수도 객체다!
+  - 함수도 객체이기 때문에 프로퍼티를 추가할 수 있다.
+- Javascript 주요 함수
+  - setTimeout 
+    - window.setTimeout(함수, 경과시간);
+    ```javascript
+    function f1() { 
+    console.log("f1().....")
+    window.setTimeout(f1, 5000);
+    }
+    -> 5초후에 f1함수 호출해!
+    window.setTimeout(function() {
+    console.log("익명함수 호출...")
+    }, 10000);
+    -> 익명함수로 변환
+    window.setTimeout(() => console.log("화살표 함수..."), 10000);
+    -> 화살표 함수로 변환.
+    ```
+    16-3,16-4 건너뛰기
+    - JSON.parse()
+      - JSON형식의 문자열을 Javascript의 객체 형태로 변환.
+      - JSON형식에서는 "문자열", boolean값은 소문자. 
+      - 숫자는 부동소수점, 정수 상관없이 그냥 입력.
+        - {"name" : "홍길동", "age" : 20, "working" : false}
+        - {"name" : "홍길동", "age" : 20, "working" : false, "address" : {"postno : "12345","baseAddress" : "경기도 화성시"}}
+        - 객체 안에 객체를 넣을 수 있다.
+        - 객체 안에 배열을 넣을 수 있다.
+        - 프로퍼티명은 ""안에 넣어 줘야한다.
+    - JSON.stringify()
+      - 객체를 JSON형태의 문자열로 변환.
+    - 익명함수
+      ```javascript
+      (function () {
+        console.log("방법1")
+      }())
+      ----------------------
+      (function () {
+        console.log("방법2")
+      })()
+      ```
+- CSV(Comma-Seperated Values) -콤마로 분리된 값
+  - 홍길동, hong@test.com,1111,비트캠프
+  ![](./images/2021-12-16-16-34-28.png)
+
+- 이클립스에서 네비게이터에서 클래스 파일 복사하면 단순 파일복사만해주기 때문에 자바소스로 인식하지 않는다.
+
