--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -1500,3 +1500,10 @@ function f1(a) {
   
   - 클래스 실행 과정과 메모리영역
   ![](./images/2021-12-17-16-55-32.png)
+
+# 12월 20일
+- 메서드 호출과 JVM Stack 메모리 영역
+  - 메인 메서드 호출시 JVM Stack에 메인 메서드에서 사용할 로컬변수를 생성
+- Bytecode 작성하기(컴파일러 경유하지않고 바로 class파일 작성하기)
+  - 소스파일(.java)작성 -> 컴파일 -> 바이트코드(.class) 작성
+- 
