--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -1506,4 +1506,158 @@ function f1(a) {
   - 메인 메서드 호출시 JVM Stack에 메인 메서드에서 사용할 로컬변수를 생성
 - Bytecode 작성하기(컴파일러 경유하지않고 바로 class파일 작성하기)
   - 소스파일(.java)작성 -> 컴파일 -> 바이트코드(.class) 작성
-- 
+
+# 12월 21일
+- Class 다루기
+  - 코드의 규모가 커지면 체계적 관리를 위해 관련 변수들을 묶어서 관리한다.
+  - 데이터 타입의 정의
+    ```java
+    class Contact {
+      String name;
+      String email;
+      String tel;
+    }
+    ```
+  - 새 데이터 타입의 메모리 만들기 
+    ```java
+     Contact c(contact인스턴스의 주소를 저장할 변수 = reference)  = new Contact(데이터 타입명= 클래스명)();
+    name, email, tell, company 등의 메모리
+    (변수)를 클래스 설계도에 따라 heap영역에생성
+    ( = 인스턴스 = 객체)
+    ```  
+  - 레퍼런스 배열
+    - 배열 사용전 
+    ```java
+    Contact c1, c2, c3(인스턴스의 주소를 저장하는 변수 = 레퍼런스)
+    c1 = new Contact();
+    c2 = new Contact();
+    c3 = new Contact();
+    c1, c2 ,c3(레퍼런스들) 에는 name, email, tel, ,company등의 Contact의 객체(인스턴스)의 주소가 저장된다.
+    ```  
+    - 배열 사용 후
+    ```java
+    Contact[] arr = new Contact[3](reference를 3개만드는 명령);
+    new로 만다는건 배열이든 인스턴스든 heap영역에 저장된다.
+    arr[0] ,arr[1] ,arr[2] -> 각각의 레퍼런스들
+    ```
+  ![](./images/2021-12-21-10-41-13.png)
+  - toString : 선언한 변수를 한줄의 문자열로 만들어줌
+  ![](./images/2021-12-21-10-57-40.png)
+
+  - Spring Boot와 클래스 파라미터
+    - 웹 서버에서 각 파라미터를 요청 (add?name=aaa&email=aaa@test.com 등) -> 스프링부트는 페이지컨트롤러(ContactController)의 요청핸들러(add()메서드) 를 호출하기 전에 add()에 선언된 클래스 인스턴스를 생성한다.
+    그 후 요청파라미터값(name=aaa&email=aaa@test.com 등)을 그 인스턴스 각 변수에 저장(name에 aaa, email에 aaa@test.com 저장)
+    ![](./images/2021-12-21-11-12-53.png)
+    ![](./images/2021-12-21-11-22-30.png)
+    -> String으로 선언한 변수명은 쿼리스트링의 파라미터와 관련없다.
+    -> 세터메서드는 쿼리스트링의 파라미터와 관련있다.
+    -> 쿼리스트링의 파라미터와 세터메서드
+    name -> setName
+    email -> setEmail
+    tel -> setTel
+    company -> setCompany
+    basicAddr -> setBasicAddr
+  - 레퍼런스와 인스턴스 변수
+    - 인스턴스 변수에 값저장
+   ```java
+    Contact c = new Contact()
+    c(인스턴스 주소를 알고있는 레퍼런스).name(인스턴스 변수) = "홍길동";
+    c.email = "test@test.com";
+    c.tel  = "1111";
+    c.company = "비트";
+   ```
+   - 인스턴스 변경
+   ```java
+   c = new Contact()
+   c.name = "임꺽정";
+   c.email = "leem@test.com";
+   c.tel =  "2222"
+   c.company = "캠프";   
+   ```
+
+- web ex04 객체
+  - 기본 틀(원형 객체) 없이 빈 객체 만들기
+  ```javascript
+  var obj1 = Object.create(null);
+  var obj2 = new Object;
+  var obj3 = {};
+  모두 같은결과, 빈객체 생성
+  ```
+  - ex04/exam02.html
+  ![](./images/2021-12-21-14-51-19.png)
+   Object 라는 생성자가 초기화한 object(객체)라는 의미.
+  - javascript에서 프로퍼티 변수를 사용할 때는 java와 달리 this.를 생략할 수 없다
+  ```javascript
+  var obj = new Object();
+
+  obj.name = "홍길동";
+  obj.kor = 100;
+  obj.eng = 90;
+  obj.math = 80;
+  obj.toString = function() {
+	return this.name + "," + this.kor + "," + this.eng + "," + this.math;
+  };
+  ```
+  - javascript 객체 생성과 JSON
+  ```javascript
+  <jvascript 객체> 
+  { name : "홍길동"
+    "email" : "a@test.com"
+    'tel' : '1111'
+    프로퍼티명, value는 "", '' 둘다 사용가능
+  }
+  <JSON(Javascript Object Notation) 문자열>
+  { "name" : "홍길동"
+    "email" : "a@test.com"
+    "tel" : "1111"
+  }
+  JSON형식 데이터의 프로퍼티명은  반드시 문자열 형식으로 사용해야하고, 문자열은 ""를 사용해야한다.
+  ```
+```javascript
+var obj = {
+	sum: () => this.kor + this.eng + this.math,
+	aver: () => this.sum() / 3,
+}; 
+화살표 함수로 객체를 정의할 때 this.는 window객체를 가리키게 된다.
+```
+![](./images/2021-12-21-16-34-03.png)
+-> 때문에 객체의 멤버 함수로 등록할 때는 화살표 함수는 가급적 사용하지 않는다.
+
+- 객체 생성과 초기화의 다양한 방법
+  ```javascript
+  1)
+  var s1 = new Object();
+  s1.name = "홍길동";
+  s1.kor = 100;
+  s1.eng = 100;
+  
+  2)var scores = []; //new Array();
+  scores[0] = new Object();
+  scores[0].name = "홍길동";
+  scores[0].kor = 100;
+  scores[0].eng = 100;
+  //배열을 이용해 객체를 생성하면 반복문을 돌릴 수 있다.
+  for (var score of scores) {
+  console.log(score.name, score.kor, score.eng,score.math, score.sum, score.aver);
+  }
+  
+  3)function createScore(name, kor, eng, math) {
+	var obj = new Object();
+	obj.name = name;
+	obj.kor = kor;
+	obj.eng = eng;
+  //함수를 이용해 객체를 생성하면 프로퍼티의 값을 일일이 지정하지 않아도 함수를 호출하여 파라미터에 값만 넣어주면 된다.
+  var scores = []; // new Array();
+  scores[0] = createScore("홍길동", 100, 100, 100);
+
+  4)function createScore(name, kor, eng, math) {
+	var obj = new Object();
+	obj.name = name;
+	obj.kor = kor;
+	obj.eng = eng;
+  obj.sum = function() { 
+		return this.kor + this.eng;
+  	};
+  }
+  //객체에 함수를 포함시킬 수 있다.
+  ```
