--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -1520,10 +1520,8 @@ function f1(a) {
     ```
   - 새 데이터 타입의 메모리 만들기 
     ```java
-     Contact c(contact인스턴스의 주소를 저장할 변수 = reference)  = new Contact(데이터 타입명= 클래스명)();
-    name, email, tell, company 등의 메모리
-    (변수)를 클래스 설계도에 따라 heap영역에생성
-    ( = 인스턴스 = 객체)
+     Contact c(contact인스턴스의 주소를 저장할 변수 = reference) = new Contact(데이터 타입명= 클래스명)();
+    name, email, tell, company 등의 메모리 (변수)를 클래스 설계도에 따라 heap영역에생성( = 인스턴스 = 객체)
     ```  
   - 레퍼런스 배열
     - 배열 사용전 
@@ -1544,7 +1542,7 @@ function f1(a) {
   - toString : 선언한 변수를 한줄의 문자열로 만들어줌
   ![](./images/2021-12-21-10-57-40.png)
 
-  - Spring Boot와 클래스 파라미터
+  ## Spring Boot와 클래스 파라미터(get, set메서드)
     - 웹 서버에서 각 파라미터를 요청 (add?name=aaa&email=aaa@test.com 등) -> 스프링부트는 페이지컨트롤러(ContactController)의 요청핸들러(add()메서드) 를 호출하기 전에 add()에 선언된 클래스 인스턴스를 생성한다.
     그 후 요청파라미터값(name=aaa&email=aaa@test.com 등)을 그 인스턴스 각 변수에 저장(name에 aaa, email에 aaa@test.com 저장)
     ![](./images/2021-12-21-11-12-53.png)
