--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -1659,3 +1659,75 @@ var obj = {
   }
   //객체에 함수를 포함시킬 수 있다.
   ```
+
+# 12월 22일
+- 생성자
+  - 함수 호출시 new로 초기화 하면 this.을 사용할 수 있다.(new명령으로 함수 호출 시 생성자 함수)
+  - 객체에 대해 공통으로 사용하는 함수는 메모리 낭비를 방지하기 위해 생성자 객체 내의 prototype객체에 별도 보관한다.
+  - new 명령후에 함수 호출하면 기본객체를 생성하고 그 객체 자체가 리턴값이 된다.
+  - 하지만 new명령없이 함수를 호출하게 되면 리턴값이 없기 때문에 undefined가 된다.
+  - 상속
+    ```javascript
+    function f1(n){
+      this.name = n;
+
+    }
+    function f2(n, k, e, m) {
+      //상위 생성자를 명시적으로 호출한다.
+      f1.call(this, n);
+
+      this.kor = k;
+      this.eng = e;
+      this.math = m;
+    }
+    var obj1 = new f2("홍길동", 100, 90, 80)
+    -> 상위 생성자.call(this.상위 생성자의 프로퍼티)
+    ```
+## CSS
+
+- ul : unordered list
+    ![](./images/2021-12-22-14-42-01.png)
+   
+- ol : ordered list
+    ![](./images/2021-12-22-14-42-54.png)
+  
+- 선택자
+  - id : "#"으로 id를 구분
+  - class : "." 으로 class를 구분
+    - 여러 클래스에 소속되있는 경우 
+    < li class="guest member" >와 같이 클래스명 클래스명 식으로 표기
+  - tag  : tag명으로 구분
+  - 부모태그 자식태그
+    ```html
+    <style>
+    #부모 > ul {
+      스타일 적용
+    }
+    #형제 + ul {
+      스타일 적용
+    }
+    </style>
+    <div id = "부모">
+      <ul>
+      </ul>
+    </div> 
+    div태그는 ul태그의 부모태그, 
+    ul태그는 div태그의 자식태그이다.
+    <div id = "형제">
+      <ul>
+      </ul>  
+    </div>
+    똑같은 ul 태그이지만 부모태그의 자식태그인 ul태그로
+    특정지었기 때문에 부모태그 안에있는 ul태그에만
+    style이 적용된다.
+    형제를 id로 갖는 태그 + ul 태그로 지정하면 형제 id를
+    갖는 태그 다음의 ul태그만을 지정하게 된다. 
+    ```
+    ```css  
+      input[name^="office"] { 
+        /* 속성의 값이 특정 문자열로 시작하는 경우*/}
+    ```
+## javascript
+- 자바스크립트는 태그를 다룰 때 사용할 도구를 제공.
+  - DOM(Document Object Model), API가 그 도구이다
+    - DOM API -  doucument 객체
