생성자, 상속,DOM API

--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -1731,3 +1731,53 @@ var obj = {
 - 자바스크립트는 태그를 다룰 때 사용할 도구를 제공.
   - DOM(Document Object Model), API가 그 도구이다
     - DOM API -  doucument 객체
+
+# 12월 23일
+## 생성자 (예제 javascript 04-11-8)
+- 모든 함수는 prototype을 가지고 있다.
+- Object()함수에 prototype.test0추가
+```javascript
+Object.prototype.test0 = function() {
+  console.log("test0()...");
+}
+```
+- prototype안에는 constructor에 대한 정보가 들어있다
+![](./images/2021-12-23-09-53-20.png)
+- prototype안에는 기본적으로 toString, valueOf, constructor정보 등이 보관되어 있다.
+- Object()상위 생성자의 prototype은 null(Object생성자가 최상위이기 때문에 상위생성자가 없다.)
+- 생성자 상속
+![](./images/2021-12-23-10-19-09.png)
+- instanceof 오른편 생성자, 왼편 객체주소
+ ex) obj1(객체명) instanceof Object(생성자)
+
+- 함수 소속 프로퍼티와 객체 소속 프로퍼티
+  - JSON.passe()(함수 소속)
+      JSON.parse('{"name" : "홍길동", "age" :20}')
+  - JSON.stringify()
+  -  Array.prototype.push() (객체 소속)
+      var arr = new Array();
+      arr(객체).push(프로퍼티명)("aaa")
+  - 특정 객체를 다루지 않는 프로퍼티는 함수에 소속시켜라
+    ```javascript
+    Score.count = 0; /* 몇명의 학생을 
+    만들었는지 특정하지 않는 프로퍼티이기 
+    때문에 함수에 소속시켰다*/
+    Score.count++;
+    var values =  csv.split(",");
+      return new Score(values[0], parseInt(values[1]), parseInt(values[2]), parseInt(values[3]))
+    }
+    ```
+  - 특정 객체를 다루는 프로퍼티는 prototype에 소속시켜라
+  ```javascript
+  Score.prototype.sum = function() {
+    return this.kor + this.eng + this.math;
+  };
+  Score.prototype.aver = function () {
+    return this.sum() /3;
+    };
+  var score1 = Score.create("홍길동,100,100,100")
+  console.log(score1.sum(), score1.aver());
+  /*sum, aver는 특정학생, 홍길동학생의 점수의
+   합산, 평균을 다루기 때문에 prototype에 넣었다.*/
+  ```
+- Document.getElementById -> Document함수에 소속된 것이 아니라 Document.prototype에 소속되어 있는 것이다  -> 그 객체에 대해 사용할 수 있다는 의미.
