쿼리셀렉터, 태그생성 등

--- a/memo/2021_1125.md
+++ b/memo/2021_1125.md
@@ -1781,3 +1781,10 @@ Object.prototype.test0 = function() {
    합산, 평균을 다루기 때문에 prototype에 넣었다.*/
   ```
 - Document.getElementById -> Document함수에 소속된 것이 아니라 Document.prototype에 소속되어 있는 것이다  -> 그 객체에 대해 사용할 수 있다는 의미.
+
+javascript ex 05 01~
+
+- getElementsByTagName은 HTMLCollection 객체를 리턴한다.
+- 이 객체는 배열이 아니기 때문에 for...in 반복문을 사용하게되면 인덱스 번호에 포함되지 않은 프로퍼티 까지 반복되게 된다.
+- 그래서 일반적으로 for...of 반복문을 사용한다
+ex05 0번에서 끝까지
