--- a/memo/생활코딩.md
+++ b/memo/생활코딩.md
@@ -136,4 +136,81 @@
     }
     --> numbering();을 통해 해당 메서드를 호출
     ```
+  # 12월 23일
+  ## 생성자와 new
+  - 객체란 서로 연관된 변수와 함수를 그룹핑한 그릇이다
+  - 객체 내의 변수를 프로퍼티, 함수를 메서드라고 한다. 
   
+    ```javascript
+    
+    var person = {}(빈객체 생성)
+    person.name = 'jjj';
+    person.introduce = function() {
+      return 'My name is ' + this.name
+    } //여기서 this란 이 함수가 속해있는 객체, 즉 person이라는 객체를 가리킴. this.name은 'jjj'라는 문자열을 의미
+    person이란 객체에 name이란 속성(프로퍼티)를 담았다. 
+    person이란 객체에 introduce 프로퍼티를 담았고 그 프로퍼티에 담긴 함수를 메소드라고 한다.
+    var person = {
+      'name' : 'jjj'
+      'introduce' : function() {
+        return 'My name is ' + this.name;
+      }
+    }
+    var person2 = {
+      'name' : 'kkk'
+      'introduce' : function() {
+        return 'My name is ' + this.name;
+      }
+    }
+    --> person과 person2의 프로퍼티 값은 서로 다르지만 함수의 내용은 완전히 같다
+    즉, 코드의 중복이 일어났다는 것이다.
+     ```
+- 생성자(constructor)를 통한 중복 방지
+  - 생성자는 객체를 만드는 역할을 한다.
+  - javascript에서 함수는 객체를 만드는 창조자라고 할 수 있다.
+  ```javascript
+  var p = new Person() //Person()은 생성자
+  console.log(p)
+  --> Person {}(빈객체 생성)
+  ``` 
+  
+  ```javascript
+  function Person(name) {
+  this.name = name;
+  this.introduce = function() {
+    return 'My name is ' + this.name;
+    }
+  }
+  var p1 = new Person('jjj');
+  var p2 = new Person('kkk');
+  이렇게 생성자를 통해서 인자를 받게 되면
+  return 'My name is ' + this.name
+  이 코드의 반복을 줄일 수 있게 된다
+  ```
+## prototype(원형)
+```javascript
+function Ultra() {}
+Ultra.prototype.ultraProp = true;
+
+function Super() {}
+Super.prototype = new Ultra()
+->Super생성자의 prototype객체에는 Ultra에의해 생성된 객체가 담기게된다. 그래서 Ultra의 프로퍼티값인 ultraProp이 new Ultra에 담기게 되어 Super에 ultraProp이란 값이 상속되게된다.
+
+ function Sub() {}
+ Sub.prototype = new Super();
+ 마찬가지로 Sub의 prototype객체에는 Super의 prototype에 담겨있던 값이 담기게되어 ultraProp이란 값을 사용할 수 있게 된다.
+var o = new Sub()
+console.log(o.ultraProp) //true
+
+Sub는 Super를 상속,Super는 Ultra를 상속. Ultra에는 ultraProp라는 값이 true로 설정되어있다.
+Sub에는 ultraProp가 설정되어 있지 않지만 Super, Ultra 상위 객체로 올라가면서 값이 있는지 확인한다.
+```
+- 생성자는 기본적으로 함수이다.
+  ```javascript
+  function Sub(){}
+  var o = new Sub()
+  new를 함수 앞에 붙이게 되면 생성자 함수가 되서 새로운 객체를 리턴하고, 변수 o에는 Sub가리턴한 객체가 들어가게 된다.
+  ```
+- 우리가 얻고자 하는 객체의 원형(객체가 어떤 프로퍼티, 어떤 메소드 를 가지고있는지)은 prototype이라는 프로퍼티에 저장되어 있다.
+- new를 통해 생성자를 호출하게되면 생성자 함수의 prototype에 저장되어있는 객체를 꺼내서 리턴하게 된다.
+- Super생성자의 prototype객체에는 new ultra라는 생성자에 의해 만들어진 객체가 담기게 된다.
